first change:Data, and Newton function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,2 @@
-exportPattern("^[[:alpha:]]+")
+export(ConfusionMatrix, costFunction, GradientDescent, NestrovGradientDescent, Newton,
+       plotAUC)
